--- a/cava/Views/Home/Bar.cshtml
+++ b/cava/Views/Home/Bar.cshtml
@@ -1,35 +1,282 @@
-﻿<div class="row card text-white bg-primary">
-    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Experience/cava_febrero2021_21.jpg" style="width:100%; border-radius:10px" />
+﻿<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
+<div class="row">
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
     </div>
-    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Bar/cava_febrero2021_18.jpg" style="width:100%; border-radius:10px" />
+    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-10 col-10">
+        <div class="row">
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_102.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_26.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_29.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_49.jpg" class="w-100" />
+            </div>
+        </div>
     </div>
-</div>
-<hr />
-<<div class="row card text-white bg-primary">
-    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Bar/cava_febrero2021_21.jpg" style="width:100%; border-radius:10px" />
-    </div>
-    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Bar/cava_febrero2021_24.jpg" style="width:100%; border-radius:10px" />
-    </div>
-</div>
-<hr />
-<<div class="row card text-white bg-primary">
-    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Bar/cava_febrero2021_97.jpg" style="width:100%; border-radius:10px" />
-    </div>
-    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Bar/cava_febrero2021_70.jpg" style="width:100%; border-radius:10px" />
-    </div>
-</div>
-<hr />
-<<div class="row card text-white bg-primary">
-     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
-         <img src="~/Content/images/Bar/cava_febrero2021_59.jpg" style="width:100%; border-radius:10px" />
-     </div>
-    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Bar/cava_febrero2021_99tif.jpg" style="width:100%; border-radius:10px" />
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
     </div>
 </div>
+<div class="row">
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-10 col-10">
+        <div class="row">
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_56.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_69.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_72.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_96.jpg" class="w-100" />
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+</div>
+<div class="row">
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-10 col-10">
+        <div class="row">
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_102.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_26.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_29.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_49.jpg" class="w-100" />
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+</div>
+<div class="row">
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-10 col-10">
+        <div class="row">
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_56.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_69.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_72.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_96.jpg" class="w-100" />
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+</div>
+<div class="row">
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-10 col-10">
+        <div class="row">
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_102.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_26.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_29.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_49.jpg" class="w-100" />
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+</div>
+<div class="row">
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-10 col-10">
+        <div class="row">
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_56.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_69.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_72.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_96.jpg" class="w-100" />
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+</div>
+<div class="row">
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-10 col-10">
+        <div class="row">
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_102.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_26.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_29.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_49.jpg" class="w-100" />
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+</div>
+<div class="row">
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-10 col-10">
+        <div class="row">
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_56.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_69.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_72.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_96.jpg" class="w-100" />
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+</div>
+<div class="row">
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-10 col-10">
+        <div class="row">
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_102.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_26.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_29.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_49.jpg" class="w-100" />
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+</div>
+<div class="row">
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+    <div class="col-xl-8 col-lg-8 col-md-8 col-sm-10 col-10">
+        <div class="row">
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_56.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_69.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_72.jpg" class="w-100" />
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 p-1 transparent8 fade-edge">
+                <img src="~/Content/images/Bar/cava_febrero2021_96.jpg" class="w-100" />
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-1 col-1">
+
+    </div>
+</div>
+@*<div class="row card text-white bg-primary">
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
+            <img src="~/Content/images/Bar/cava_febrero2021_21.jpg" />
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
+            <img src="~/Content/images/Bar/cava_febrero2021_18.jpg" />
+        </div>
+    </div>
+    <hr />
+    <<div class="row card text-white bg-primary">
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
+            <img src="~/Content/images/Bar/cava_febrero2021_21.jpg" />
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
+            <img src="~/Content/images/Bar/cava_febrero2021_24.jpg" />
+        </div>
+    </div>
+    <hr />
+    <<div class="row card text-white bg-primary">
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
+            <img src="~/Content/images/Bar/cava_febrero2021_97.jpg" />
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
+            <img src="~/Content/images/Bar/cava_febrero2021_70.jpg" />
+        </div>
+    </div>
+    <hr />
+    <<div class="row card text-white bg-primary">
+         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
+             <img src="~/Content/images/Bar/cava_febrero2021_59.jpg" />
+         </div>
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
+            <img src="~/Content/images/Bar/cava_febrero2021_99tif.jpg" />
+        </div>
+    </div>*@
