--- a/cava/Views/Home/Experience.cshtml
+++ b/cava/Views/Home/Experience.cshtml
@@ -1,9 +1,9 @@
 ﻿<div>
-    <div id="carouselExampleFade" class="carousel slide carousel-fade h-600 transparent8" data-ride="carousel">
-        <div class="carousel-inner h-600">
+    <div id="experience-carousel" class="carousel slide carousel-fade h-700 transparent8" data-ride="carousel">
+        <div class="carousel-inner h-700">
             <div class="carousel-item active">
-                <a href="https://order.cava.com/delivery" style="position:absolute;" class="slide-title"><p class="p-5">EXCELENTE UBICACIÓN</p></a>
-                <a href="https://order.cava.com/delivery" style="position:absolute;" class="slide-sub-title">
+                <a href="https://order.cava.com/delivery" class="slide-title invisible"><p class="p-5">EXCELENTE UBICACIÓN</p></a>
+                <a href="https://order.cava.com/delivery" class="slide-sub-title invisible">
                     <p class="p-5">
                         UBICADOS ESTRATÉGICAMENTE EN LA ENTRADA DE <b><u>AVENIDA ESCAZÚ</u></b>,SOMOS SIN DUDA EL LUGAR MÁS EXCLUSIVO Y DINÁMICO DE LA ZONA
                     </p>
@@ -11,8 +11,8 @@
                 <img class="d-block w-100" src="~/Content/images/Kitchen/cava_febrero2021_15.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-                <a href="https://order.cava.com/delivery" style="position:absolute;" class="slide-title"><p class="p-5">VARIEDADES</p></a>
-                <a href="https://order.cava.com/delivery" style="position:absolute;" class="slide-sub-title">
+                <a href="https://order.cava.com/delivery" class="slide-title invisible"><p class="p-5">VARIEDADES</p></a>
+                <a href="https://order.cava.com/delivery" class="slide-sub-title invisible">
                     <p class="p-5">
                         ESPACIOS EXCLUSIVOS PARA REUNIONES Y CELEBRACIONES
                         <br />
@@ -26,8 +26,8 @@
                 <img class="d-block w-100" src="~/Content/images/Kitchen/cava_febrero2021_48.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <a href="https://order.cava.com/delivery" style="position:absolute;" class="slide-title"><p class="p-5">SERVICIOS</p></a>
-                <a href="https://order.cava.com/delivery" style="position:absolute;" class="slide-sub-title">
+                <a href="https://order.cava.com/delivery" class="slide-title invisible"><p class="p-5">SERVICIOS</p></a>
+                <a href="https://order.cava.com/delivery" class="slide-sub-title invisible">
                     <p class="p-5">
                         AFTER OFFICE, ALMUERZOS Y CENAS<br />
                         NOCHES TEMÁTICAS<br />
@@ -68,7 +68,7 @@
             <img class="d-block w-100 transparent5" src="~/Content/images/Experience/cava_febrero2021_48.jpg">
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 p-0 transparent8">
-            <p class="container-title ">AVENIDA ESCAZU</p>
+            <p class="container-title">AVENIDA ESCAZU</p>
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 p-0">
             <img class="d-block w-100 transparent5" src="~/Content/images/Experience/cava_febrero2021_37.jpg">
