--- a/cava/Views/Shared/_Layout.cshtml
+++ b/cava/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
-<body class="bg">
+<body class="bg" style="overflow-x:hidden">
     <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="nav-link flex-row cava-title" href="#">
@@ -68,5 +68,7 @@
     @RenderSection("scripts", required: false)
 
     <script src="~/Scripts/notify.js"></script>
+    <link rel="stylesheet" href="~/Content/jquery.datetimepicker.css" />
+    <script src="~/Scripts/jquery.datetimepicker.full.js"></script>
 </body>
 </html>
